<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Score">

    <TextView
        android:id="@+id/winner"
        android:layout_width="311dp"
        android:layout_height="95dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/winner"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/endBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="461dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="222dp"
        android:text="@string/end"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playAgainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="461dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="222dp"
        android:text="@string/playAgain"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/congratulations"
        android:layout_width="320dp"
        android:layout_height="43dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noGuessesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text=""
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/winner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratulations" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="88dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>